--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@openai/chatkit": "^1.1.0",
     "@supabase/supabase-js": "^2.39.0",
     "next": "^14.0.4",
     "react": "^18.2.0",
