feat: Implement Day 1-3 MVP core features
- Add OpenAI integration for chat API
- Add ElevenLabs TTS for voice generation
- Add Whisper API for speech-to-text
- Create Supabase client with database types
- Implement /api/chat endpoint with wind algorithm
- Implement /api/voice endpoint with audio storage
- Implement /api/whisper endpoint for transcription
- Create chat UI components (MessageBubble, VoiceInput)
- Create main chat page with full conversation flow
- Install required dependencies (openai, elevenlabs)
- Fix TypeScript types for Character enum to string union

--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0",
+    "elevenlabs": "^0.8.2",
     "next": "^14.0.4",
+    "openai": "^4.67.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
